fix: nav flex-wrap

--- a/assets/css/utilities/responsive.scss
+++ b/assets/css/utilities/responsive.scss
@@ -97,6 +97,7 @@
 
   .site-nav ul {
     justify-content: space-between;
+    flex-wrap: nowrap !important;
     font-size: var(--font-size-base);
     gap: var(--spacing-md);
   }
